Cleanup logs (#1739)
* fix

* cleanups!

---------

Co-authored-by: a <a>